[package]
name = "vpi"
version = "0.1.1"
authors = ["LDV"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
i2cdev  = "0.4.4"
sysfs_gpio = "0.5"
memoffset = "0.5"
pbr = "1.0"
serde = { version="1.0", features=["derive"] }
serde_json = "1.0"

