[package]
name = "vpid"
version = "0.1.0"
authors = ["boros"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vpi = { path = "../vpi" }
log = "0.4"
simple_logger="1.3"
failure = "0.1.5"
serde = { version="1.0", features=["derive"] }
serde_piecewise_default = "0.2"
serde_yaml = "0.8"
yaml-rust = "0.4"
crossbeam-channel = "0.3"
strum = "0.16"
strum_macros = "0.16"
