[package]
name = "vpid"
version = "0.1.0"
authors = ["boros"]
edition = "2018"
license = "MIT"
description = "Vertical Pi user space daemon"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vpi = { path = "../vpi" }
log = "0.4"
simple_logger="1.6.0"
snafu = "0.6"
clap = "2.33"
serde = { version="1.0", features=["derive"] }
serde_piecewise_default = "0.2"
serde_yaml = "0.8"
yaml-rust = "0.4"
crossbeam-channel = "0.4"
rlua ="0.17.0"
signal-hook = "0.1"
